--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.0.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "firebase": "^9.22.0"
   }
 }
