--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
-    "firebase": "^9.22.0"
+    "firebase": "^9.22.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
