--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.22.0",
     "fs-extra": "^11.1.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "prettier": "^2.8.8"
   }
 }
